--- a/une-cinema-typescript/package.json
+++ b/une-cinema-typescript/package.json
@@ -4,6 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "typescript": "^4.7.4"
   }
 }
