--- a/une-cinema-typescript/package.json
+++ b/une-cinema-typescript/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^18.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "parcel": "^2.6.2",
     "typescript": "^4.7.4"
   }
 }
