--- a/une-cinema-typescript/package.json
+++ b/une-cinema-typescript/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start:server": "npx ts-node server.ts",
+    "start": "parcel index.html"
+  },
   "dependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
