--- a/une-cinema-service/package.json
+++ b/une-cinema-service/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "zod": "^3.17.10"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
