--- a/une-cinema-service/package.json
+++ b/une-cinema-service/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongoose": "^6.5.2",
     "zod": "^3.17.10"
   },
   "devDependencies": {
