--- a/une-cinema-service/package.json
+++ b/une-cinema-service/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.5.2",
     "zod": "^3.17.10"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
