--- a/une-cinema-service/package.json
+++ b/une-cinema-service/package.json
@@ -13,14 +13,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.5.2",
     "zod": "^3.17.10"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.6",
     "ts-node-dev": "^2.0.0",
