--- a/une-cinema-service/package.json
+++ b/une-cinema-service/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.5.2",
+    "ws": "^8.8.1",
     "zod": "^3.17.10"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.6",
     "@types/supertest": "^2.0.12",
+    "@types/ws": "^8.5.3",
     "jest": "^29.0.1",
     "supertest": "^6.2.4",
     "ts-jest": "^28.0.8",
