--- a/une-cinema-typescript/package.json
+++ b/une-cinema-typescript/package.json
@@ -4,13 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start:server": "npx ts-node server.ts",
-    "start": "parcel index.html"
+    "start": "concurrently \"parcel src/index.html\" \"npx ts-node src/server.ts\""
   },
   "dependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
+    "concurrently": "^7.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "parcel": "^2.6.2",
