--- a/une-cinema-service/package.json
+++ b/une-cinema-service/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "bootstrapdb": "ts-node src/util/bootstrapDB.ts",
-    "start": "npx tsc && node dist/src/index.js",
+    "postinstall": "tsc",
+    "start": "node dist/src/index.js",
     "test": "jest"
   },
   "keywords": [],
