Fix an issue with the Dockerfile for service

--- a/une-cinema-service/Dockerfile
+++ b/une-cinema-service/Dockerfile
@@ -6,6 +6,7 @@ ADD ./package.json ./
 ADD ./yarn.lock ./
 ADD ./tsconfig.json ./
 ADD ./.env ./
-RUN yarn
+# add --ignore-scripts to skip postinstall script
+RUN yarn --ignore-scripts 
 
 CMD yarn bootstrapdb; yarn dev
